# smadimo_gp_5_deep_learning

./: README.md  mlp_part_0.ipynb  pyproject.toml
FruitsDL/: Readme.md
tabular_data/: README.md  eda Антона Г + мои MLP.ipynb  eda.ipynb  eda_MLP.ipynb
x5_reviews/: README.md  bert.ipynb  example.env  first_try.csv  grocery_negative.csv  labled.csv  llm_label.ipynb  prepare.ipynb  reviews.ipynb  second_try.csv  test.csv  train.csv  valid.csv  x5.csv
