[project]
name = "smadimo-gp-5-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=26.5.1",
    "datasets>=4.0.0",
    "fastparquet>=2026.5.0",
    "huggingface-hub>=1.19.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pyarrow==20.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
