[project]
name = "smadimo-gp-5-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.14.0",
    "black[jupyter]>=26.5.1",
    "datasets>=4.0.0",
    "evaluate>=0.4.6",
    "fastparquet>=2026.5.0",
    "huggingface-hub>=1.19.0",
    "mlflow>=1.27.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pyarrow==20.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
